--- a/index.html
+++ b/index.html
@@ -5,3 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shintomemes</title>
+<head>
+<body>
+    <audio controls>
+        <source = src="MoFTitle.mp3">
+    </audio>
+</body>
