--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shintomemes</title>
-<head>
+</head>
 <body>
-    <audio controls>
-        <source = src="MoFTitle.mp3">
-    </audio>
+    <script>
+        var audio = new Audio('MoFTitle.mp3');
+        audio.play();
+    </script>
 </body>
+<html>
