--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        var audio = new Audio('MoFTitle.mp3');
+        var audio = new Audio('https://github.com/nichekino/shintomemes/blob/main/MoFTitle.mp3?raw=true');
         audio.play();
     </script>
 </body>
