--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Shintomemes</title>
 </head>
 <body>
-    <script>
-        var audio = new Audio('https://github.com/nichekino/shintomemes/blob/main/MoFTitle.mp3?raw=true');
-        audio.play();
-    </script>
+    <audio autoplay muted>
+        <source src="https://github.com/nichekino/shintomemes/blob/main/MoFTitle.mp3" type ="audio/mpeg">
+    </audio>
 </body>
 <html>
