--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Shintomemes</title>
 </head>
 <body>
-    <audio autoplay muted>
-        <source src="https://github.com/nichekino/shintomemes/blob/main/MoFTitle.mp3" type ="audio/mpeg">
-    </audio>
+    <audio src="MoFTitle.mp3" type="audio/mp3">
 </body>
 <html>
