--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Shintomemes</title>
 </head>
 <body>
-    <audio src="MoFTitle.mp3" type="audio/mp3">
+    <audio loop src="MoFTitle.mp3" type="audio/mp3"></audio>
 </body>
 <html>
