--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shintomemes</title>
-</head>
-<body>
-    <audio loop src="MoFTitle.mp3" type="audio/mp3"></audio>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="Shintomemes.webp">
+        <title>Shintomemes</title>
+    </head>
+    <body>
+        <audio loop src="MoFTitle.mp3" type="audio/mp3"></audio>
+    </body>
 <html>
