--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="Shintomemes.webp">
+        <meta name="description" content="Web page dedicated to Sanae Kochiya">
+        <meta property="og:description" content="Sanae Kochiya my beloved">
+        <meta property="og:image" content="Shintomemes.webp">
+        <link rel="icon" type="image/png" href="Shintomemes.webp">
         <title>Shintomemes</title>
     </head>
     <body>
