--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Web page dedicated to Sanae Kochiya">
         <meta property="og:description" content="Sanae Kochiya my beloved">
         <meta property="og:image" content="Shintomemes.webp">
-        <link rel="icon" type="image/png" href="Shintomemes.webp">
+        <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/nichekino/shintomemes/refs/heads/main/Shintomemes.webp">
         <title>Shintomemes</title>
     </head>
     <body>
