--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Web page dedicated to Sanae Kochiya">
         <meta property="og:description" content="Sanae Kochiya my beloved">
-        <meta property="og:image" content="Shintomemes.webp">
+        <meta property="og:image" content="https://raw.githubusercontent.com/nichekino/shintomemes/refs/heads/main/Shintomemes.webp">
         <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/nichekino/shintomemes/refs/heads/main/Shintomemes.webp">
         <title>Shintomemes</title>
     </head>
     <body>
-        <audio loop src="MoFTitle.mp3" type="audio/mp3"></audio>
+        <audio loop src="https://github.com/nichekino/shintomemes/raw/refs/heads/main/MoFTitle.mp3" type="audio/mp3"></audio>
     </body>
 <html>
