--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <title>Shintomemes</title>
     </head>
     <body>
-        <audio loop src="https://github.com/nichekino/shintomemes/raw/refs/heads/main/MoFTitle.mp3" type="audio/mp3"></audio>
+        <audio autoplay loop>
+            <source src="https://github.com/nichekino/shintomemes/raw/refs/heads/main/MoFTitle.mp3" type=audio/mpeg>
+        </audio>
     </body>
 <html>
