--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <title>Shintomemes</title>
     </head>
     <body>
-        <audio autoplay loop>
+        <audio controls autoplay loop>
             <source src="https://github.com/nichekino/shintomemes/raw/refs/heads/main/MoFTitle.mp3" type=audio/mpeg>
         </audio>
     </body>
