--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
         <title>Shintomemes</title>
     </head>
     <body>
-        <audio controls autoplay loop>
+        <audio id="bg-music" autoplay loop>
             <source src="https://github.com/nichekino/shintomemes/raw/refs/heads/main/MoFTitle.mp3" type=audio/mpeg>
         </audio>
+        <script>
+            document.addEventListener("DOMContentLoaded, function() {
+                let audio = document.getElementById("bg-music");
+                audio.volume = 0.25;
+            });
+        </script>
     </body>
 <html>
