--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <source src="https://github.com/nichekino/shintomemes/raw/refs/heads/main/MoFTitle.mp3" type=audio/mpeg>
         </audio>
         <script>
-            document.addEventListener("DOMContentLoaded, function() {
+            document.addEventListener("DOMContentLoaded", function() {
                 let audio = document.getElementById("bg-music");
                 audio.volume = 0.25;
                 if (audio.paused) {
