--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
         </style>
     </head>
     <body>
+        <div id="background">
+            <style>
+                .background {
+                    position: fixed;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100vh;
+                    background-image: url('https://raw.githubusercontent.com/nichekino/shintomemes/refs/heads/main/bg.webp');
+                    background-size: cover;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    z-index: -1;
+                }
+            </style>
+        </div>
         <p id="start-text">Click anywhere to donate!</p>
         <audio id="bg-music" autoplay loop>
             <source src="https://github.com/nichekino/shintomemes/raw/refs/heads/main/MoFTitle.mp3" type=audio/mpeg>
