--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 text-align: center;
                 margin-top: 50px;
             }
-            #body {
+            body {
                 background-image: url("https://raw.githubusercontent.com/nichekino/shintomemes/refs/heads/main/bg.webp");
                 background-size: cover;
                 background-position: center;
