--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 background-repeat: no-repeat;
                 height: 100vh;
                 margin: 0;
+                z-index: -1;
             }
         </style>
     </head>
