--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 text-align: center;
                 margin-top: 50px;
             }
+        </style>
+        <style>
             body {
                 background-image: url("https://raw.githubusercontent.com/nichekino/shintomemes/refs/heads/main/bg.webp");
                 background-size: cover;
