--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
                 text-align: center;
                 margin-top: 50px;
             }
-        </style>
-        <style>
             body {
                 background-image: url("https://raw.githubusercontent.com/nichekino/shintomemes/refs/heads/main/bg.webp");
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
                 height: 100vh;
+            }
+            html, body {
+                overflor: hidden;
+                height: 100%;
             }
         </style>
     </head>
