--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 height: 100vh;
             }
             html, body {
-                overflor: hidden;
+                overflow: hidden;
                 height: 100%;
             }
         </style>
