--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                 background-repeat: no-repeat;
                 height: 100vh;
             }
+            middle-img {
+                max-width: 50%;
+                max-height:50%;
+            }
             html, body {
                 overflow: hidden;
                 height: 100%;
@@ -34,6 +38,17 @@
         <audio id="bg-music" autoplay loop>
             <source src="https://github.com/nichekino/shintomemes/raw/refs/heads/main/MoFTitle.mp3" type=audio/mpeg>
         </audio>
+        <middle-img id="randomImage" alt="Random Image">
+        <script>
+            const images = [
+                "https://github.com/nichekino/shintomemes/blob/main/sanae-middle/image1.png?raw=true",
+                "https://github.com/nichekino/shintomemes/blob/main/sanae-middle/image2.png?raw=true",
+                "https://github.com/nichekino/shintomemes/blob/main/sanae-middle/image3.png?raw=true"
+            ]
+            const randomIndex = Math.floor(Math.random() * images.length);
+            const randomImage = images[randomIndex];
+            document.getElementById("randomImage").src = "images/" + randomImage;
+        </script>
         <script>
             document.addEventListener("DOMContentLoaded", function() {
                 let audio = document.getElementById("bg-music");
