--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             ]
             const randomIndex = Math.floor(Math.random() * images.length);
             const randomImage = images[randomIndex];
-            document.getElementById("randomImage").src = "images/" + randomImage;
+            document.getElementById("randomImage").src = randomImage;
         </script>
         <script>
             document.addEventListener("DOMContentLoaded", function() {
