--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             middle-img {
                 max-width: 50%;
                 max-height:50%;
+                align-items: center;
+                justify-content: center;
+                display: flex;
             }
             html, body {
                 overflow: hidden;
