--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 "https://github.com/nichekino/shintomemes/blob/main/sanae-middle/image3.png?raw=true"
                 ];
             const index = Math.floor(Math.random() * possibilities.length);
+            console.log(index);
+            console.log(possibilities[index);
             document.getElementById("image").src = possibilities[index];
-            console.log(randomIndex);
-            console.log(images[randomIndex]);
         </script>
         <script>
             document.addEventListener("DOMContentLoaded", function() {
