--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <audio id="bg-music" autoplay loop>
             <source src="https://github.com/nichekino/shintomemes/raw/refs/heads/main/MoFTitle.mp3" type=audio/mpeg>
         </audio>
-        <img id="randomImage" alt="Random Image">
+        <img id="randomImage" alt="sanae-middle">
         <script>
             const possibilities = [
                 "https://github.com/nichekino/shintomemes/blob/main/sanae-middle/image1.png?raw=true",
@@ -52,7 +52,7 @@
                 ];
             const index = Math.floor(Math.random() * possibilities.length);
             console.log(index);
-            console.log(possibilities[index);
+            console.log(possibilities[index]);
             document.getElementById("image").src = possibilities[index];
         </script>
         <script>
