--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             const index = Math.floor(Math.random() * possibilities.length);
             console.log(index);
             console.log(possibilities[index]);
-            document.getElementById("image").src = possibilities[index];
+            document.getElementById("randomImage").src = possibilities[index];
         </script>
         <script>
             document.addEventListener("DOMContentLoaded", function() {
