--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
         <title>Shintomemes</title>
         <style>
             html, body {
-                height: 100%;
+                height: 25%;
+                width: 25%;
                 margin: 0;
                 display: flex;
                 justify-content: center;
                 align-items: center;
             }
             #image {
-                max-width: 25vw;
-                max-height: 25vh;
+                max-width: 90vw;
+                max-height: 90vh;
                 width: auto;
                 height: auto;
                 border-radius: 2px;
                 cursor: pointer;
                 transition: scale 100ms ease-out;
+                border-radius: 10px;
             }
             #image:active {
                 scale: 0.98;
