--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 cursor: pointer;
                 transition: scale 100ms ease-out;
                 border-radius: 10px;
+                z-index: 1;
             }
             #image:active {
                 scale: 0.98;
@@ -37,6 +38,7 @@
                 font-size: 20px;
                 text-align: center;
                 margin-top: 50px;
+                z-index: 2;
             }
             body {
                 background-image: url("https://raw.githubusercontent.com/nichekino/shintomemes/refs/heads/main/bg.webp");
