--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
         </style>
     </head>
     <body>
-        <p id="start-text">Click anywhere to donate!</p>
         <audio id="bg-music" autoplay loop>
             <source src="https://github.com/nichekino/shintomemes/raw/refs/heads/main/MoFTitle.mp3" type=audio/mpeg>
         </audio>
-        <img id="randomImage" alt="sanae-middle">
+        <img id="randomImage" alt="sanae-middle" style="width: 250px; height: auto; display: block; margin: auto;>
         <script>
             const possibilities = [
                 "https://github.com/nichekino/shintomemes/blob/main/sanae-middle/image1.png?raw=true",
