--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
                 height: 100vh;
             }
             #image {
-                max-width: 25vw;
-                max-height: 25vh;
-                width: auto;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%,-50%);
                 height: auto;
                 border-radius: 2px;
                 cursor: pointer;
