--- a/index.html
+++ b/index.html
@@ -19,11 +19,6 @@
                 height: 100vh;
             }
             #image {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%,-50%);
-                height: auto;
                 border-radius: 2px;
                 cursor: pointer;
                 transition: scale 100ms ease-out;
@@ -41,7 +36,7 @@
         <audio id="bg-music" autoplay loop>
             <source src="https://github.com/nichekino/shintomemes/raw/refs/heads/main/MoFTitle.mp3" type=audio/mpeg>
         </audio>
-        <img id="randomImage" alt="sanae-middle" style="width: 250px; height: auto; display: block; margin: auto;">
+        <img id="randomImage" alt="sanae-middle" style="width: 250px; height: auto; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%");>
         <script>
             const possibilities = [
                 "https://github.com/nichekino/shintomemes/blob/main/sanae-middle/image1.png?raw=true",
