--- a/index.html
+++ b/index.html
@@ -22,9 +22,18 @@
                 border-radius: 2px;
                 cursor: pointer;
                 transition: scale 100ms ease-out;
+                animation: spin 10s linear infinite;
             }
             #image:active {
                 scale: 0.98;
+            }
+            @keyframes spin {
+                from {
+                    transform: rotate(0deg);
+                }
+                to {
+                    transform: rotate(360deg);
+                }
             }
             html, body {
                 overflow: hidden;
@@ -36,7 +45,7 @@
         <audio id="bg-music" autoplay loop>
             <source src="https://github.com/nichekino/shintomemes/raw/refs/heads/main/MoFTitle.mp3" type=audio/mpeg>
         </audio>
-        <img id="randomImage" alt="sanae-middle" style="width: 250px; height: auto; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%");>
+        <img id="randomImage" alt="sanae-middle" style="width: 350px; height: auto; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%");>
         <script>
             const possibilities = [
                 "https://github.com/nichekino/shintomemes/blob/main/sanae-middle/image1.png?raw=true",
