--- a/index.html
+++ b/index.html
@@ -45,7 +45,18 @@
         <audio id="bg-music" autoplay loop>
             <source src="https://github.com/nichekino/shintomemes/raw/refs/heads/main/MoFTitle.mp3" type=audio/mpeg>
         </audio>
-        <img id="randomImage" alt="sanae-middle" style="width: 350px; height: auto; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%");>
+        <img id="randomImage" alt="sanae-middle" style=
+            "width: 350px;
+            height: auto;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%");
+            border-radius 2px;
+            cursor: pointer;
+            transition: scale 100ms ease-out;
+            animation: spin 10s linear infinite;
+            >
         <script>
             const possibilities = [
                 "https://github.com/nichekino/shintomemes/blob/main/sanae-middle/image1.png?raw=true",
