--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
                 background-repeat: no-repeat;
                 height: 100vh;
             }
+            .image-container {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%,-50%);
+            }
             #image {
                 border-radius: 2px;
                 cursor: pointer;
@@ -45,7 +51,9 @@
         <audio id="bg-music" autoplay loop>
             <source src="https://github.com/nichekino/shintomemes/raw/refs/heads/main/MoFTitle.mp3" type=audio/mpeg>
         </audio>
-        <img id="randomImage" alt="sanae-middle" style="width: min(450px, 75vw); animation: spin infinite linear; animation-duration: 60s; border-readius: 2px; cursor: pointer; transition: scale 100ms ease-out;">
+        <div class="image-container">
+            <img id="randomImage" alt="sanae-middle" style="width: min(450px, 75vw); animation: spin infinite linear; animation-duration: 60s; border-readius: 2px; cursor: pointer; transition: scale 100ms ease-out;">
+        </div>
         <script>
             const possibilities = [
                 "https://github.com/nichekino/shintomemes/blob/main/sanae-middle/image1.png?raw=true",
