--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 animation: spin 10s linear infinite;
             }
             #image:active {
-                scale: 0.98;
+                transform: scale(0.9);
             }
             @keyframes spin {
                 from {
