--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
                 left: 50%;
                 transform: translate(-50%,-50%);
             }
-            #image {
+            .image {
+                width: min(450px,75vw);
+                animation: spin infinite linear;
+                animation-duration: 60s;
                 border-radius: 2px;
                 cursor: pointer;
-                transition: scale 100ms ease-out;
-                animation: spin 10s linear infinite;
+                transition: transform 0.2s ease-in-out;
             }
-            #image:active {
-                transform: scale(0.9);
+            .image:active {
+                 transform: scale(0.9);
             }
             @keyframes spin {
                 from {
@@ -52,7 +54,8 @@
             <source src="https://github.com/nichekino/shintomemes/raw/refs/heads/main/MoFTitle.mp3" type=audio/mpeg>
         </audio>
         <div class="image-container">
-            <img id="randomImage" alt="sanae-middle" style="width: min(450px, 75vw); animation: spin infinite linear; animation-duration: 60s; border-readius: 2px; cursor: pointer; transition: transform 0.2s ease-in-out;">
+            <!-- <img id="randomImage" alt="sanae-middle" style="width: min(450px, 75vw); animation: spin infinite linear; animation-duration: 60s; border-readius: 2px; cursor: pointer; transition: transform 0.2s ease-in-out;"> -->
+            <img alt="sanae-middle" class="image">
         </div>
         <script>
             const possibilities = [
