--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 animation-duration: 60s;
                 border-radius: 2px;
                 cursor: pointer;
-                transition: transform 0.2s ease-in-out;
+                transition: scale 100ms ease-in-out;
             }
             .image:active {
-                 transform: scale(0.9);
+                 scale: 0.85;
             }
             @keyframes spin {
                 from {
