--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 font-size: 24px;
                 font-weight: bold;
                 position: absolute;
-                top: 20px;
-                left: 20px;
+                top: 15%;
+                left: 50%;
             }
             .image-container {
                 position: absolute;
