--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </audio>
         <div class="image-container">
             <!-- <img id="randomImage" alt="sanae-middle" style="width: min(450px, 75vw); animation: spin infinite linear; animation-duration: 60s; border-readius: 2px; cursor: pointer; transition: transform 0.2s ease-in-out;"> -->
-            <img id="randomImage" alt="sanae-middle" class="image">
+            <img id="randomImage" alt="sanae-middle" class="image" onclick="increment()">
         </div>
         <div id="click-count">Donated: 0¥</div>
         <script>
