--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             let clickCount = 0;
             function increment() {
                 clickCount ++;
-                document.getElementById("click-count").textContent = "Donated: ${clickCount}¥";
+                document.getElementById("click-count").textContent = 'Donated: ${clickCount}¥';
 
                 const img = document.querySelector(".image");
                 img.style.transform = "scale(0.9)";
