--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                 height: 100vh;
             }
             #click-count {
-                font-size: 24px;
+                font-family: "Roboto", sans-serif;
+                color: #ffffff;
+                font-size: 5%;
                 font-weight: bold;
                 position: absolute;
                 top: 15%;
