--- a/index.html
+++ b/index.html
@@ -18,14 +18,17 @@
                 background-repeat: no-repeat;
                 height: 100vh;
             }
+            #click-count-container {
+                position: absolute;
+                top: 15;
+                left: 50;
+                transform: translate(-50%,-50%);
+            }
             #click-count {
                 font-family: "Roboto", sans-serif;
                 color: #ffffff;
                 font-size: 80px;
                 font-weight: bold;
-                position: absolute;
-                top: 15%;
-                left: 50%;
             }
             .image-container {
                 position: absolute;
@@ -63,10 +66,11 @@
             <source src="https://github.com/nichekino/shintomemes/raw/refs/heads/main/MoFTitle.mp3" type=audio/mpeg>
         </audio>
         <div class="image-container">
-            <!-- <img id="randomImage" alt="sanae-middle" style="width: min(450px, 75vw); animation: spin infinite linear; animation-duration: 60s; border-readius: 2px; cursor: pointer; transition: transform 0.2s ease-in-out;"> -->
             <img id="randomImage" alt="sanae-middle" class="image" onclick="increment()">
         </div>
-        <div id="click-count">Donated: 0¥</div>
+        <div class="click-count-container">
+            <div id="click-count">Donated: 0¥</div>
+        </div>
         <script>
             let clickCount = 0;
             function increment() {
