--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             }
             #click-count-container {
                 position: absolute;
-                top: 15;
-                left: 50;
+                top: 15%;
+                left: 50%;
                 transform: translate(-50%,-50%);
             }
             #click-count {
