--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
                 background-repeat: no-repeat;
                 height: 100vh;
             }
-            #click-count-container {
-                display: flex;
+            .click-count-container {
                 position: absolute;
-                justify-content: center;
-                top: 20%;
-                width: 50%;
+                top: 85%;
+                left: 50%;
+                transform: translate(-50%,-50%);
             }
-            #click-count {
+            .click-count {
                 font-family: "Roboto", sans-serif;
                 color: #ffffff;
                 font-size: 80px;
