--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 left: 50%;
                 transform: translate(-50%,-50%);
             }
-            .click-count {
+            #click-count {
                 font-family: "Roboto", sans-serif;
                 color: #ffffff;
                 font-size: 80px;
