--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 font-family: "Roboto", sans-serif;
                 color: #ffffff;
                 font-size: 80px;
-                text-shadow: 8px 8px 16px black, -8px -8px 16px black, 8px -8px 16px black, -8px 8px 16px black
+                text-shadow: 8px 8px 16px black, -8px -8px 16px black, 8px -8px 16px black, -8px 8px 16px black;
                 font-weight: bold;
             }
             .image-container {
