--- a/index.html
+++ b/index.html
@@ -56,6 +56,28 @@
                     transform: rotate(360deg);
                 }
             }
+            .footer-container {
+                position: absolute;
+                top: 100%;
+                left: 50%;
+                transform: translate(-50%,-50%);
+            }
+            #footer {
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                text-align: center;
+                color: white;
+                font-family: sans-serif, system-ui;
+                opacity: 0.16;
+                transition: opacity 0.5s;
+            }
+            footer:hover,
+            footer:focus,
+            footer:focus-within {
+                opacity 1;
+            }
             html, body {
                 overflow: hidden;
                 height: 100%;
@@ -74,6 +96,9 @@
         </div>
         <div class="click-count-container">
             <div id="click-count">Donated: 0¥</div>
+        </div>
+        <div class="footer-container">
+            <div id="footer">Not affiliated with any Religion, this is simply a shitpost and test website.</div>
         </div>
         <script>
             let clickCount = 0;
