--- a/index.html
+++ b/index.html
@@ -63,20 +63,11 @@
                 transform: translate(-50%,-50%);
             }
             #footer {
-                position: fixed;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                text-align: center;
-                color: white;
+                font-size: 15px;
+                font-weight: bold;
+                color: #ffffff;
                 font-family: sans-serif, system-ui;
-                opacity: 0.16;
-                transition: opacity 0.5s;
-            }
-            footer:hover,
-            footer:focus,
-            footer:focus-within {
-                opacity 1;
+                opacity: 0.7;
             }
             html, body {
                 overflow: hidden;
