--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             }
             .footer-container {
                 position: absolute;
-                top: 100%;
+                top: 92%;
                 left: 50%;
-                transform: translate(-50%,-50%);
+                width: 100%
             }
             #footer {
                 font-size: 15px;
