--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
                 position: absolute;
                 top: 92%;
                 left: 50%;
+                transform: translate(-50%,-50%);
             }
-            #footer {
+            .footer {
                 font-size: 15px;
                 font-weight: bold;
                 color: #ffffff;
