--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
             }
             .footer-container {
                 position: absolute;
-                top: 92%;
+                top: 98%;
                 left: 50%;
                 transform: translate(-50%,-50%);
             }
-            .footer {
+            #footer {
+                font-family: "Roboto", sans-serif;
+                color: #ffffff;
                 font-size: 15px;
                 font-weight: bold;
-                color: #ffffff;
-                font-family: sans-serif, system-ui;
                 opacity: 0.7;
             }
             html, body {
