--- a/index.html
+++ b/index.html
@@ -92,10 +92,31 @@
             <div id="footer">Not affiliated with any Religion, this is simply a shitpost and test website.</div>
         </div>
         <script>
-            let clickCount = 0;
+            function setCookie(name,value,days) {
+                let expires = "",
+                    if (days) {
+                    let date = new Date();
+                    date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+                    expires = "; expires=" + date.toUTCString();
+                    }
+                document.cookie = name + "=" + value + "; path=/" + expires;
+            }
+            function getCookie(name) {
+                let nameEQ = name + "=";
+                let cookiesArray = document.cookie.split(";");
+                for (let i = 0; i < cookiesArray.length; i++) {
+                    let cookie = cookiesArray[i].trim();
+                    if (cookie.indexOf(nameEQ) == 0) return cookie.substring(nameEQ.length, cookie.length);
+                  }
+                return null;
+            }
+        </script>
+        <script>
+            let clickCount = parseInt(getCookie("counter")) || 0;
             function increment() {
                 clickCount ++;
                 document.getElementById("click-count").textContent = 'Donated: ' + clickCount + "¥";
+                setCookie("counter",clickCounter,30);
                 const pressAudio = document.getElementById("press");
                 const clone = pressAudio.cloneNode(true);
                 clone.volume = 0.5;
