--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
         </div>
         <script>
             function setCookie(name,value,days) {
-                let expires = "",
+                let expires = "";
                 if (days) {
                     let date = new Date();
                     date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
                     expires = "; expires=" + date.toUTCString();
-                    }
+                }
                 document.cookie = name + "=" + value + "; path=/" + expires;
             }
             function getCookie(name) {
@@ -114,7 +114,8 @@
             function increment() {
                 clickCount ++;
                 document.getElementById("click-count").textContent = 'Donated: ' + clickCount + "¥";
-                setCookie("counter",clickCounter,30);
+                setCookie("counter", clickCount, 30);
+                console.log(getCookie("counter") || 0, " Counter");
                 const pressAudio = document.getElementById("press");
                 const clone = pressAudio.cloneNode(true);
                 clone.volume = 0.5;
