--- a/index.html
+++ b/index.html
@@ -89,7 +89,13 @@
             <div id="click-count">Donated: 0¥</div>
         </div>
         <div class="footer-container">
-            <div id="footer">Not affiliated with any Religion, this is simply a shitpost and test website.</div>
+           <!-- <div id="footer">Not affiliated with any Religion, this is simply a shitpost and test website.</div> -->
+            <div id="footer">
+                <span>You can support me on: </span>
+                <span>
+                    <a href="https://ko-fi.com/nichekino/">Ko-Fi!</a>
+                </span>
+            </div>
         </div>
         <script>
             function setCookie(name,value,days) {
